--- a/hw1.html
+++ b/hw1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-TW">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,9 +7,37 @@
     <title>HomeWork1</title>
 </head>
 <body>
-    <h1>PHP 學習站台列表</h1>
-    <p>推薦清單<br>
+    <h1 title="Boring Sites">PHP 學習站台列表</h1>
+    <p style="color: red;">推薦清單<br>
         <a href="http://php.onlinedoc.tw">PHP 無限</a><br>
+        <img src="./images/tank1.jpg" width="300" height="200" alt="Tank for 64">64</img>
     </p>
+    <h1 style="font-size: 60px;">Heading 1</h1>
+    <h2>Heading 2</h2>
+    <h3>Heading 3</h3>
+    <h4>Heading 4</h4>
+    <h5>Heading 5</h5>
+    <h6>Heading 6</h6>
+
+    <p style="background: powderblue;">
+    This paragraph<br>
+    contains a lot of lines<br>
+    in the source code,<br>
+    but the browser<br>
+    ignores it.<br>
+    </p>
+    <hr>
+    <pre style="background-color: royalblue;
+     color: saddlebrown;
+     font-family: 'Courier New', Courier, monospace;
+     font-size: 160%;
+     text-align: end;
+     ">
+    This paragraph
+    contains         a lot of spaces
+    in the source         code,
+    but the        browser
+    ignores it.
+    </pre>
 </body>
 </html>
