--- a/20210326/table.html
+++ b/20210326/table.html
@@ -8,7 +8,7 @@
     <title>Table Test</title>
 </head>
 <body>
-<center>
+<div style="align-content: center;">
     <h3>電通水果行</h3>
     <table>
         <caption>水果售價表</caption>
@@ -44,6 +44,6 @@
             <td>07-3456789</td>
         </tr>
     </table>
-</center>
+</div>
 </body>
 </html>
