--- a/databases/hello.html
+++ b/databases/hello.html
@@ -16,8 +16,8 @@
         <input type="text" name="email"><br>
         <label for="phone">Phone Number:</label>
         <input type="text" name="phone"><br>
-        <input type="button" value="submit">
-        <input type="button" value="reset">
+        <input type="submit" value="submit">
+        <input type="reset" value="reset">
     </form>
 </body>
 </html>
